--- a/lab10/public/index.html
+++ b/lab10/public/index.html
@@ -21,26 +21,26 @@
           <label for="max">Max moves:</label><br>
           <input type="number" id="max" name="max" value="0" min="0" max="99"><br><br>  
         </div>
-        <!-- TODO: implement newGame() function -->
-        <button id="new-game" onclick="newGame()">New game</button>
+        <button id="new-game" onclick="start()">New game</button>
       </div>
       <div id="current-game-data">
         <div id="score">
           <h1>SCORE:</h1>
-            <h2>BLACK: <span id="black-score"> </span></h2>
-            <h2>WHITE: <span id="white-score"> </span></h2>
+            <h2>BLACK: <span id="bscore"> </span></h2>
+            <h2>WHITE: <span id="wscore"> </span></h2>
         </div>
         <div id="guesses">
           <h1>GUESSES:</h1>
             <h2>LEFT UNRATED: <span id="unrated"> </span></h2>
-            <h2>LEFT: <span id="tries-left"> </span></h2>
+            <h2>LEFT: <span id="guesses-left"> </span></h2>
         </div>
         <div id="current-guess">
-          <input type="number" id="guess" name="guess" placeholder="???" min="0" value="0">
-        <!-- TODO: implement guess() function -->
+          <input type="number" id="guess" name="guess" placeholder="0" min="0" value="0">
           <button id="guess-btn" onclick="guess()">Try it!</button></div>
       </div>
       </div>
+      <h2>Guess history</h2>
+      <div id="past-guesses">empty</div>
     </div>
   </body>
 </html>
